# app

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  compose.yaml  pyproject.toml
src/app/: __init__.py  main.py
